// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Coverage > should render with undefined className 1`] = `
<div
  class="w-full px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider"
  data-collection="react-aria-react-useId-mock"
  data-orientation="vertical"
/>
`;

exports[`Story Snapshots > AllDisabled 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      class="opacity-disabled pointer-events-none"
      data-disabled="true"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-disabled="true"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-disabled="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          disabled=""
          id=":r1a:"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-disabled="true"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-disabled="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="opacity-disabled pointer-events-none"
      data-disabled="true"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-disabled="true"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-disabled="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          disabled=""
          id=":r1c:"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-disabled="true"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-disabled="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="opacity-disabled pointer-events-none"
      data-disabled="true"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-disabled="true"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-disabled="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          disabled=""
          id=":r1e:"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-disabled="true"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-disabled="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllVariants 1`] = `
<div>
  <div
    class="w-96"
  >
    <div
      class="w-full px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider mb-12"
      data-collection="react-aria-react-useId-mock"
      data-orientation="vertical"
    >
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rc:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                1.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":re:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                2.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rg:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                3.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
    </div>
    <div
      class="shadow-medium rounded-medium bg-content1 w-full px-0 divide-y divide-solid divide-divider mb-12"
      data-collection="react-aria-react-useId-mock"
      data-orientation="vertical"
    >
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":ri:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                1.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rk:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                2.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rm:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                3.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
    </div>
    <div
      class="border-medium border-divider rounded-medium w-full px-0 divide-y divide-solid divide-divider mb-12"
      data-collection="react-aria-react-useId-mock"
      data-orientation="vertical"
    >
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":ro:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                1.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rq:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                2.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":rs:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                3.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
    </div>
    <div
      class="flex flex-col gap-2 w-full px-0 mb-12"
      data-collection="react-aria-react-useId-mock"
      data-orientation="vertical"
    >
      <div
        class="px-4 bg-content1 shadow-medium rounded-medium"
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":ru:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                1.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        class="px-4 bg-content1 shadow-medium rounded-medium"
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":r10:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                2.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
      <div
        class="px-4 bg-content1 shadow-medium rounded-medium"
        data-slot="base"
      >
        <h2
          class="px-4"
          data-slot="heading"
        >
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            data-react-aria-pressable="true"
            data-slot="trigger"
            id=":r12:"
            tabindex="0"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
                data-slot="title"
              >
                3.
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
              data-slot="indicator"
            >
              <svg
                aria-hidden="true"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M15.5 19l-7-7 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
          </button>
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > CustomStyles 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      class="py-0"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="w-full gap-3 tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity py-0 data-[hover=true]:bg-blue-100 rounded-lg h-14 flex items-center"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r23:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground font-normal text-medium"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 text-medium rotate-180 data-[open=true]:rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="py-0"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="w-full gap-3 tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity py-0 data-[hover=true]:bg-blue-100 rounded-lg h-14 flex items-center"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r25:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground font-normal text-medium"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 text-medium rotate-180 data-[open=true]:rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="py-0"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="w-full gap-3 tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity py-0 data-[hover=true]:bg-blue-100 rounded-lg h-14 flex items-center"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r27:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground font-normal text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 text-medium rotate-180 data-[open=true]:rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r0:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r2:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r4:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DefaultOpen 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1m:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-open="true"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-open="true"
        data-slot="heading"
      >
        <button
          aria-controls=":r1p:"
          aria-expanded="true"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-open="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1o:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-open="true"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-open="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
      <section
        style="will-change: auto; opacity: 1; height: auto; overflow-y: unset;"
      >
        <div
          aria-labelledby=":r1o:"
          class="py-2 px-4"
          data-open="true"
          data-slot="content"
          id=":r1p:"
          role="region"
        >
          <div>
            Second item
          </div>
        </div>
      </section>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1r:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > IndicatorLeft 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity flex-row-reverse"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1t:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 -rotate-180 data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity flex-row-reverse"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1v:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 -rotate-180 data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity flex-row-reverse"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r21:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rtl:-rotate-180 rtl:data-[open=true]:-rotate-90 -rotate-180 data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > OnlySingleSelection 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r14:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r16:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r18:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > SomeDisabled 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      class="opacity-disabled pointer-events-none"
      data-disabled="true"
      data-slot="base"
      disabled=""
    >
      <h2
        class="px-4"
        data-disabled="true"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-disabled="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          disabled=""
          id=":r1g:"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-disabled="true"
              data-slot="title"
            >
              1.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-disabled="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="opacity-disabled pointer-events-none"
      data-disabled="true"
      data-slot="base"
    >
      <h2
        class="px-4"
        data-disabled="true"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-disabled="true"
          data-react-aria-pressable="true"
          data-slot="trigger"
          disabled=""
          id=":r1i:"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-disabled="true"
              data-slot="title"
            >
              2.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-disabled="true"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r1k:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithSubtitle 1`] = `
<div>
  <div
    class="px-0 divide-y divide-solid divide-divider border-b border-t border-solid border-divider w-96"
    data-collection="react-aria-react-useId-mock"
    data-orientation="vertical"
  >
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r6:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              1.
            </span>
            <span
              class="text-small text-foreground-500 font-normal"
              data-slot="subtitle"
            >
              Subtitle
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":r8:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              2.
            </span>
            <span
              class="text-small text-foreground-500 font-normal"
              data-slot="subtitle"
            >
              Subtitle
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      data-slot="base"
    >
      <h2
        class="px-4"
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-react-aria-pressable="true"
          data-slot="trigger"
          id=":ra:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-medium"
              data-slot="title"
            >
              3.
            </span>
            <span
              class="text-small text-foreground-500 font-normal"
              data-slot="subtitle"
            >
              Subtitle
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;
